force-app/main/default/objects/Subcontractor__c/Subcontractor__c.object-meta.xml
<CustomObject>
    <label>Subcontractor</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Subcontractor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subcontractors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>