force-app/main/default/objects/Subcontractor__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subcontractors</relationshipLabel>
    <relationshipName>Subcontractors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>