force-app/main/default/objects/Subcontractor__c/fields/Billing_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Address__c</fullName>
    <label>Billing Contact Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>