force-app/main/default/objects/Subcontractor__c/fields/Billing_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone_Number__c</fullName>
    <label>Billing Contact Phone Number</label>
    <type>Phone</type>
</CustomField>