force-app/main/default/objects/Subcontractor__c/fields/Business_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Address__c</fullName>
    <label>Business Contact Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>