force-app/main/default/objects/Subcontractor__c/fields/Business_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact_Phone__c</fullName>
    <label>Business Contact Phone</label>
    <type>Phone</type>
</CustomField>