force-app/main/default/objects/Subcontractor__c/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>