force-app/main/default/objects/Subcontractor__c/fields/Company_County__c.field-meta.xml
<CustomField>
    <fullName>Company_County__c</fullName>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>