force-app/main/default/objects/Subcontractor__c/fields/Company_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Primary_Phone__c</fullName>
    <label>Company Primary Phone</label>
    <type>Phone</type>
</CustomField>