force-app/main/default/objects/Subcontractor__c/fields/Company_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Street_Name__c</fullName>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>