force-app/main/default/objects/Subcontractor__c/fields/Company_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Street_Number__c</fullName>
    <label>Street Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>