force-app/main/default/objects/Subcontractor__c/fields/Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_URL__c</fullName>
    <description>URL for the Company as provided from the Subcontractor to the Broker office</description>
    <label>Company URL</label>
    <type>Url</type>
</CustomField>