force-app/main/default/objects/Subcontractor__c/fields/Company_Zip__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip__c</fullName>
    <label>Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>