force-app/main/default/objects/Subcontractor__c/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>Database administrator Name of the Subcontractor who Bright MLS will engage in the process</description>
    <label>DBA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>