force-app/main/default/objects/Subcontractor__c/fields/Primary_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Address__c</fullName>
    <label>Primary Contact Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>