force-app/main/default/objects/Subcontractor__c/fields/Subcontractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Name__c</fullName>
    <label>Subcontractor Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>