force-app/main/default/objects/Subcontractor__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Subcontractors (Subscription)</relationshipLabel>
    <relationshipName>Subcontractors</relationshipName>
    <type>Lookup</type>
</CustomField>