force-app/main/default/objects/Subcontractor__c/fields/Technical_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_Address__c</fullName>
    <label>Technical Contact Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>