force-app/main/default/objects/Subcontractor__c/fields/Technical_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact_Name__c</fullName>
    <label>Technical Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>